xs 1.0 to xs 1.1
----------------

Switched to the Meson/Ninja build system.

Restrict the garbage collector to a single marking thread. Given the
extremely low marker CPU utilization, it makes no sense to allocate
one thread per CPU.

Removed the ./xsdebug script, which was still es code and not usable
with xs.

Corrected errors and formatting issues in the man page. Added
some clarifications.

The (optional) editline library is no longer supported.

The assignment operator must be delimited by whitespace in order to
distinguish this usage from "long" arguments (--foo=blah).

The modulus operator (%) may be used in math expressions. This is
implemented by std::fmod.

Added infix relational operators :lt, :le, :gt, :ge, :eq and :ne.
These all use the new comparison function %cmp, which in turn uses
the primitive comparison function &cmp.

Added a builtin printf. This is implemented by the primitive &printf
and requires the ffi library. The underlying implemention is printf(3),
but the xs wrapper limits access to printf(3p) functionality without
length modifiers. This addition requires the ffi library.

Added Unicode escapes \uxxxx and \Uxxxxxxxx.

Corrected the behaviors of pushd and popd. Added dirs to display
directory stack.

Added a rudimentary jobs command.

Added a history command.

On platforms that provide a sigsetjmp() library call, the first
SIGINT caused all subsequent SIGINTs to be blocked. This broke the
ability to cancel an unfinished command line using ^C. Worse, all
forked programs inherited the SIGINT block. This is now fixed.

The `escape` command no longer discards exception arguments.

Xs would exit on SIGQUIT (^\) because the signal caused xs to behave as
if readline() had received an EOF. This is now fixed.

Readline now has tab-complete for functions, variables, binaries in path
and (when written with a ./ prefix) files in the working directory.

Removed &$promptignore and &$nopromptignore. Xs automatically marks